fullSandbox11072023/force-app/main/default/objects/Sales_Impact__c/Sales_Impact__c.object-meta.xml
<CustomObject>
    <label>Sales Impact</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sales Impact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Impact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>