fullSandbox11072023/force-app/main/default/objects/Sales_Impact__c/fields/Current_Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Month__c</fullName>
    <formula>MONTH(Date__c) &lt; Opportunity__r.Current_Fiscal_Month_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Month</label>
    <type>Checkbox</type>
</CustomField>