fullSandbox11072023/force-app/main/default/objects/Sales_Impact__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATE(
YEAR(ADDMONTHS(Opportunity__r.CloseDate, Month__c)),
MONTH(ADDMONTHS(Opportunity__r.CloseDate, Month__c)),
/*DAY(Opportunity__r.CloseDate)*/
01
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>