fullSandbox11072023/force-app/main/default/objects/Sales_Impact__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <inlineHelpText>Month Number used to create the date (1-12)</inlineHelpText>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>