fullSandbox11072023/force-app/main/default/objects/Sales_Impact__c/fields/Sales_Impact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Impact__c</fullName>
    <formula>Opportunity__r.Amount / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Impact</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>