fullSandbox11072023/force-app/main/default/objects/Sales_Impact__c/fields/YTD_Filter__c.field-meta.xml
<CustomField>
    <fullName>YTD_Filter__c</fullName>
    <formula>AND(
YEAR(Date__c) = YEAR(TODAY()), 
MONTH(Date__c) &lt; MONTH(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Filter</label>
    <type>Checkbox</type>
</CustomField>